# KumaAnime-App

./: .env_example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.rtf  PRIVACY_POLICY.txt  README.md  SECURITY.md  build_installer.ps1  firestore.rules  pubspec.yaml  storage.rules
.github/workflows/: Notify.yml  build-and-release.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  kuma_asm.S  kuma_asm.h  kuma_security.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: subtitle_controller.dart
lib/core/app/: dohResolver.dart  env.dart  logging.dart  runtimeDatas.dart  update.dart  version.dart
lib/core/commons/: enums.dart  extensions.dart  systemBars.dart  types.dart  utils.dart
lib/core/data/: animeSpecificPreference.dart  downloadHistory.dart  hive.dart  misc.dart  preferences.dart  providers.dart  theme.dart  (+6 more)
lib/l10n/: app_en.arb  app_id.arb
lib/models/: subtitle.dart
lib/services/: subtitle_provider.dart  subtitle_repository.dart  subtitle_service.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+213 files in other folders)
